force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/FSM_LeafletIntegrationConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Created as part of SFI-1822, This will hold the information on for which template what fields need to be send to Mailjet</description>
    <label>Leaflet Integration Configuration</label>
    <pluralLabel>Leaflet Integration Configurations</pluralLabel>
</CustomObject>