force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_Active__c.field-meta.xml
<CustomField>
    <fullName>FSM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SFI-1822</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>