force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FSM_BusinessUnit__c</fullName>
    <description>SFI-1822</description>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metering</fullName>
                <default>true</default>
                <label>Metering</label>
            </value>
            <value>
                <fullName>Waste</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>DevService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>