force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldAPIName__c</fullName>
    <description>SFI-1822</description>
    <label>Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>