force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_IsGeneric__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsGeneric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-1822</description>
    <label>Is Generic?</label>
    <type>Checkbox</type>
</CustomField>