force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>FSM_TemplateId__c</fullName>
    <description>SFI-1822</description>
    <label>Template Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>