force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_TemplateIDWelsh__c.field-meta.xml
<CustomField>
    <fullName>FSM_TemplateIDWelsh__c</fullName>
    <description>SFI-xxxx</description>
    <label>Template ID Welsh</label>
    <length>50</length>
    <type>Text</type>
</CustomField>