force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/fields/FSM_TemplateName__c.field-meta.xml
<CustomField>
    <fullName>FSM_TemplateName__c</fullName>
    <description>SFI-1822</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>