force-app/main/default/objects/FSM_LeafletIntegrationConfiguration__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_TemplateName__c</columns>
    <columns>FSM_TemplateId__c</columns>
    <columns>FSM_TemplateIDWelsh__c</columns>
    <columns>FSM_ObjectAPIName__c</columns>
    <columns>FSM_FieldAPIName__c</columns>
    <columns>FSM_IsGeneric__c</columns>
    <columns>FSM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>